w06_style.css
html {
  background-color: blue;
  font-family: serif;
}
body {
  background-color: lightblue;
}
h1
h2 {
  text-align: center;
}
img {
  width: 40%;
}
li {
  border: 2px dashed gray;
  font-family: sans-serif;
}
p {
  font-size: 18px;
}
a {
  font-weight: bold;
}

